--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "SEED_VALUE = np.random.seed(4155)\n",
+    "\n",
     "\n"
    ]
   },
@@ -51,7 +51,9 @@
    "outputs": [],
    "source": [
     "maxdegree = 18\n",
-    "for n in (20,30):\n",
+    "for n in (20,40):\n",
+    "    SEED_VALUE = np.random.seed(4155)\n",
+    "    \n",
     "    x = np.sort(np.random.uniform(0, 1, n))\n",
     "    y = np.sort(np.random.uniform(0, 1, n))\n",
     "    x,y = np.meshgrid(x,y)\n",
@@ -78,18 +80,18 @@
     "        variance[degree-1] = np.var(t_predicted)\n",
     "        \n",
     "        \n",
-    "    plt.plot(np.arange(1,maxdegree+1), MSE_test,\"m\", label='MSE test')\n",
-    "    plt.plot(np.arange(1,maxdegree+1), bias,\"b--\", label='bias')\n",
-    "    plt.plot(np.arange(1,maxdegree+1), variance,\"r--\", label='Variance')\n",
+    "    plt.semilogy(np.arange(1,maxdegree+1), MSE_test,\"m\", label='MSE test')\n",
+    "    plt.semilogy(np.arange(1,maxdegree+1), bias,\"b--\", label='bias')\n",
+    "    plt.semilogy(np.arange(1,maxdegree+1), variance,\"r--\", label='Variance')\n",
     "    #plt.plot(np.arange(1,maxdegree+1), variance+bias,\"o--\", label='CONTROL')\n",
     "\n",
     "\n",
     "    plt.xlabel(f\"Polynomial Degree\")\n",
-    "    plt.ylabel(\"Prediction Error - MSE\")\n",
+    "    plt.ylabel(\"Prediction Error - MSE (log)\")\n",
     "\n",
     "    plt.grid(True)\n",
     "    plt.legend(loc=1)\n",
-    "    plt.title(f\"Bias variance trade-off, n = {n}\")\n",
+    "    plt.title(f\"Bias variance trade-off, {n**2} datapoints\")\n",
     "    plt.xticks(np.arange(1,maxdegree+1))\n",
     "    plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_bias_var_function_n_{n}.pdf\")\n",
     "    plt.show()"
@@ -108,32 +110,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_bootstraps = n - int(n/2)\n",
-    "maxdegree = 18\n",
-    "n = 20 \n",
-    "x = np.sort(np.random.uniform(0, 1, n))\n",
-    "y = np.sort(np.random.uniform(0, 1, n))\n",
-    "x,y = np.meshgrid(x,y)\n",
-    "t = FrankeFunction(x,y) + noise_factor(n)\n",
+    "\n",
+    "for n in (20,40):\n",
+    "    \n",
+    "    SEED_VALUE = np.random.seed(4155)\n",
+    "    n_bootstraps = n**2 - int((n**2)/2)\n",
+    "    maxdegree = 5\n",
+    "    x = np.sort(np.random.uniform(0, 1, n))\n",
+    "    y = np.sort(np.random.uniform(0, 1, n))\n",
+    "    x,y = np.meshgrid(x,y)\n",
+    "    t = FrankeFunction(x,y) + noise_factor(n)\n",
     "\n",
     "\n",
-    "polydegree = np.arange(1, maxdegree+1)\n",
-    "MSE_test, MSE_train, bias, variance = bootstrap(x, y, t, maxdegree, n_bootstraps, OLS(), SEED_VALUE)\n",
+    "    polydegree = np.arange(1, maxdegree+1)\n",
+    "    MSE_test, MSE_train, bias, variance = bootstrap(x, y, t, maxdegree, n_bootstraps, OLS(), SEED_VALUE)\n",
     "\n",
-    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
-    "plt.plot(polydegree, bias,\"b--\", label='bias')\n",
-    "plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
-    "# plt.ylim(0,2)\n",
-    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "    plt.semilogy(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "    plt.semilogy(polydegree, bias,\"b--\", label='bias')\n",
+    "    plt.semilogy(polydegree, variance,\"r--\", label='Variance')\n",
+    "    # plt.ylim(0,2)\n",
+    "    #plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
     "\n",
-    "plt.xlabel(f\"Model complexity / Polynomial Degree at n={n} with {n_bootstraps} bootstraps\")\n",
-    "plt.ylabel(\"Prediction Error - MSE\")\n",
-    "plt.xticks(polydegree)\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.title(f\"Bias variance trade-off with {n_bootstraps} bootstrap, n = {n}\")\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function.pdf\")\n",
-    "plt.show()"
+    "    plt.xlabel(f\"Model complexity / Polynomial Degree at n={n} with {n_bootstraps} bootstraps\")\n",
+    "    plt.ylabel(\"Prediction Error - MSE (log)\")\n",
+    "    plt.xticks(polydegree)\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.title(f\"Bias variance trade-off with {n_bootstraps} bootstraps, {n**2} datapoints\")\n",
+    "    plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function_n_{n}.pdf\")\n",
+    "    plt.show()"
    ]
   },
   {
